Bug 488083 - video scrubber thumb can overlap play/pause button and duration. ui-r=boriss, r=ryan
UltraBlame original commit: 4fbaf81986a24cb7e39ac838d4705ec1e4dd6a50

--- a/toolkit/themes/pinstripe/global/media/videocontrols.css
+++ b/toolkit/themes/pinstripe/global/media/videocontrols.css
@@ -117,6 +117,11 @@
     margin: 0;
 }
 
+.scrubber .scale-slider {
+    
+    margin-top: -9px;
+    margin-bottom: 10px;
+}
 
 .scrubber .scale-thumb {
     
@@ -127,9 +132,8 @@
 
 .timeThumb {
     background: url(chrome://global/skin/media/scrubberThumb.png) no-repeat center;
-    min-width: 44px;
-    min-height: 22px;
-    margin-top: -14px;
+    min-width: 45px;
+    min-height: 27px;
     -moz-box-pack: center;
 }
 
@@ -140,7 +144,12 @@
 .timeLabel {
     color: rgba(255,255,255,0.75);
     font: 10px sans-serif;
-    padding-top: 6px;
+    text-shadow: rgba(0,0,0, 0.3) 0 1px;
+    padding-top: 4px;
+}
+
+.timeThumb[showhours="true"] > .timeLabel {
+    padding-top: 3px;
 }
 
 .statusOverlay {
